2000-09-02 07:56 GMT+1 Bruno Cantero <bruno@issnet.net>
   + Added ( BYTE * ) casting to hb_gt_AdjustPos() parameter calls.
   + Added ( char * ) casting to out_stdout() parameter calls.


2000-09-02 00:08 GMT+1 Bruno Cantero <bruno@issnet.net>
   + include/hbdbf.h
   + include/hbrddcdx.h
   * makefile.bc
   * makefile.vc
   * source/rdd/dbfcdx/Makefile
   * source/rdd/dbfcdx/dbfcdx1.c
   * source/rdd/rddsys.prg
      + Added DBFCDX files to makefiles and reactivate it.
        By now is the default driver (rddsys.prg).
 
   * include/hbrdddbf.h
   * source/rdd/dbcmd.c
   * source/rdd/workarea.c
   * source/rdd/hbdbsort.c
      * Fixed some warnings.

   * tests/newrdd.prg
      + Added CVS header Id.

   * tests/testcdx.prg
      * Test FPT memos.

2000-09-01 13:55 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
     ! fixed hilighting and dehilighting of cells if field is logical; that is logical cells value
       is centered on cell width so cursor position needs to be centered too.

2000-08-30 00:19 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * makefile.vc
   * makefile.bc
     + GTCGI added to the make process.

2000-08-30 10:48 GMT+1 Bruno Cantero <bruno@issnet.net>
  * source/rdd/dbf1.c
    * Fixed two warning.

2000-08-30 10:40 GMT+1 Bruno Cantero <bruno@issnet.net>
  * include/hbrdddbf.h
  * source/rdd/dbcmd.c
  * source/rdd/dbf1.c
  * tests/newrdd.prg
    + Added missing memo functions.

2000-08-28 22:50 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * config/dos/global.cf
   * config/linux/global.cf
   * config/os2/global.cf
   * config/w32/global.cf
     + GTCGI added to the default list of GT drivers built for all platforms.

   * bin/bld.sh
     ! == changed to =

   * include/Makefile
     + Added new header files.

   * source/compiler/hbusage.c
     ! Made even more CA-Clipper like.

   * source/rdd/dbsort.prg
     % Minor opt.

   * source/rtl/filesys.c
     ! Fixed hb_fsLock() for DJGPP
